--- a/views/users/register.phtml
+++ b/views/users/register.phtml
@@ -1,1 +1,12 @@
 <h1>Register</h1>
+<form action="index.php?route=register" method="POST">
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email">
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password">
+    <label for="confirm_password">Confirm password</label>
+    <input type="password" id="confirm_password" name="confirm_password">
+    <input type="submit" value="Join">
+</form>
