--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/styles/css/style.css"> 
     <title>Tricount</title>
 </head>
 <body>
-    <?php require $this->template ?>
+<?php 
+    if(isset($_SESSION["user"]))
+    {
+        require 'views/users/connected/_header.phtml';
+    }
+    else{
+        require 'views/users/guest/_header.phtml';
+    }
+    require $this->template;
+    if(isset($_SESSION["user"]))
+    {
+        require 'views/users/connected/_footer.phtml';
+    }
+    else{
+        require 'views/users/guest/_footer.phtml';
+    }
+?>
 </body>
+<script rel="module" src="assets/js/index.js"></script>
 </html>
