--- a/views/categories/categories.phtml
+++ b/views/categories/categories.phtml
@@ -1,19 +1,34 @@
+<?php 
+$manager = new CategoryManager();
+?> 
 <h1>Categories</h1>
+<nav>
+    <ul>
+        <li><a href="index.php?route=add-category">Ajouter</a></li>
+    </ul>
+</nav>
 <table>
     <thead>
         <tr>
-            <td>one</td>
-            <td>two</td>
-            <td>three</td>
+            <th>id</th>
+            <th>name</th>
+            <th>user-id</th> 
         </tr>
     </thead>
     <tbody>
         <?php
-            foreach($this->data["categories-names"] as $category)
-            {
-                ?>
-                <tr><?=$category?></tr><?php
-            }
+        foreach($manager->getAllCategories() as $category)
+        {?>
+            <tr>
+                <td><?=$category->getId()?></td>
+                <td><?=$category->getName()?></td>
+                <td><?=$category->getUserId()?></td>
+            </tr>
+        <?php
+        }
         ?>
+        
+            
+        
     </tbody>
 </table>
