--- a/views/users/connected/_header.phtml
+++ b/views/users/connected/_header.phtml
@@ -1,6 +1,8 @@
 <header>
-    <nav>
-        <ul>
+<nav>
+        <ul id="nav-header">
+            <li><a href="index.php?route=categories">Catégories</a></li>
+            <li><a href="index.php?route=expenses">Dépenses</a></li>
             <li><a href="index.php?route=account">My Account</a></li>
             <li><a href="index.php?route=disconnect">Disconnect</a></li>
         </ul>
