--- a/views/users/guest/_footer.phtml
+++ b/views/users/guest/_footer.phtml
@@ -1,6 +1,6 @@
 <footer>
     <nav>
-        <ul>
+        <ul id="nav-footer">
             <li><a href="index.php?route=login">Log-In</a></li>
             <li><a href="index.php?route=register">Register</a></li>
         </ul>
