--- a/views/users/login.phtml
+++ b/views/users/login.phtml
@@ -1,4 +1,5 @@
-<h1>Log In</h1>
+<div class="style form">
+<h2>Log In</h2>
 <form action="index.php?route=login" method="POST">
     <label for="email">Email</label>
     <input type="email" id="email" name="email">
@@ -6,3 +7,4 @@
     <input type="password" id="password" name="password">
     <input type="submit" value="LogIn">
 </form>
+</div>
