--- a/views/users/register.phtml
+++ b/views/users/register.phtml
@@ -1,4 +1,5 @@
-<h1>Register</h1>
+<div class="style form">
+<h2>Register</h2>
 <form action="index.php?route=register" method="POST">
     <label for="username">Username</label>
     <input type="text" id="username" name="username">
@@ -9,4 +10,11 @@
     <label for="confirm_password">Confirm password</label>
     <input type="password" id="confirm_password" name="confirm_password">
     <input type="submit" value="Join">
+    <span class="advert"><?php
+    if(isset($this->data["message"]))
+    {
+        echo $this->data["message"];
+    }
+    ?></span>
 </form>
+</div>
