--- a/views/users/login.phtml
+++ b/views/users/login.phtml
@@ -6,5 +6,11 @@
     <label for="password">Password</label>
     <input type="password" id="password" name="password">
     <input type="submit" value="LogIn">
+    <span class="advert"><?php
+    if(isset($this->data["message"]))
+    {
+        echo $this->data["message"];
+    }
+    ?></span>
 </form>
 </div>
